logs/Slang/generic/number/number_test_77.sv.log
name: number_test_77
description: Test
should_fail: 0
tags: 5.6.4 5.7.1 5.7.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_77.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_77.sv:7:21: error: unknown macro or compiler directive '`WIDTH'
parameter int foo = `WIDTH'h`DIGITS;
                    ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_77.sv:7:29: error: unknown macro or compiler directive '`DIGITS'
parameter int foo = `WIDTH'h`DIGITS;
                            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_77.sv:7:36: error: expected vector literal digits
parameter int foo = `WIDTH'h`DIGITS;
                                   ^
